--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,3 +19,36 @@ a:hover {
 .content ul {
   @apply my-6;
 }
+
+.i::before {
+  content: "";
+  position: absolute;
+  width: 0px;
+  height: 0px;
+  opacity: 20%;
+  background: white;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+}
+
+.i:hover:before {
+  animation: anim-in 0.7s forwards ease-out;
+}
+
+@keyframes anim-in {
+  100% {
+    opacity: 0%;
+    border-radius: 0;
+    width: 256px;
+    height: 48px;
+  }
+  0% {
+    width: 0px;
+    height: 48px;
+    border-radius: 100%;
+    opacity: 20%;
+  }
+}
